examples/should_fail/naming.hs
MLM
    { name = Name "naming"
    , classes =
        [ Class
            { isAbstract = False
            , level = 1
            , name = Name "A"
            , parents =
                [ Name "B" ]
            , classifier = Nothing
            , attributes = []
            , operations = []
            , slots = []
            }
        ]
    , associations = []
    , links = []
    }
